--- a/style.css
+++ b/style.css
@@ -45,9 +45,41 @@
     font-size: 8px;
     font-weight: bold;
     background-color: #EB0089;
+    border-color: #EB0089;
     color: white;
 }
-.twobrushesimage{
+.twobrushesImageSection{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+.twobrushesImage{
     width: 100%;
     height: 400px;
+}
+.promotionSection{
+    position: absolute;
+    top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.dentistRecommendedLogo{
+    height: 70px;
+}
+.brushingPerfectedText{
+    margin-top: 20px;
+    font-size: 45px;
+    font-weight: bolder;
+}
+.gobyProvided{
+    text-align: center;
+    font-size: 20px;
+}
+.secondButton{
+    margin-top: 20px;
+    width: 120px;
+    background-color: #487CFE;
+    border-color: #487CFE;
 }
