--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@
     position: relative;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
 }
 .twobrushesImage{
     width: 100%;
@@ -82,4 +81,84 @@
     width: 120px;
     background-color: #487CFE;
     border-color: #487CFE;
+}
+.afterHeroesSection0{
+    background-color: #487CFE;
+    height: 70px;
+}
+.afterHeroesSection{
+    width: 70%;
+}
+.firstFeature{
+    color: white;
+}
+.secondFeature{
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+.singleBrushImageSection{
+    position: relative;
+}
+.benefitsSection{
+    position: absolute;
+    left: 100px;
+    bottom: 50px;
+}
+.benefits{
+    font-weight: bolder;
+    margin-bottom: 20px;
+}
+.fiveFeatures{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: end;
+    position: absolute;
+    top: 100px;
+    left: 50px;;
+}
+.pipeImage{
+    height: 50px;
+    margin-left: 10px;
+}
+.logoFeature{
+    margin-left: 10px;
+    display: flex;
+}
+.variousFeatures{
+    font-size: 15px;
+    font-weight: bold;
+    margin-left: 10px;
+}
+.fiveFeature2{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: end;
+    position: absolute;
+    top: 200px;
+    left: 400px;;
+}
+.fiveFeature3{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: end;
+    position: absolute;
+    top: 300px;
+    left: 650px;;
+}
+.fiveFeature4{
+    display: flex;
+    /* align-items: end; */
+    position: absolute;
+    top: 10px;
+    left: 550px;;
+}
+.fiveFeature5{
+    display: flex;
+    /* flex-direction: row-reverse; */
+    /* align-items: end; */
+    position: absolute;
+    top: 50px;
+    right: 50px;;
 }
