--- a/style.css
+++ b/style.css
@@ -260,3 +260,34 @@
 .donationDetetails2{
   text-align: center;
 }
+.hashTagDetails{
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.hashTag{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+.afterHashTag{
+  margin-top: 10px;
+  text-align: center;
+}
+.variousUsers0{
+  padding-bottom: 50px;
+  display: flex;
+  justify-content: center;
+}
+.variousUsers{
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+
+}
+.userType{
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+}
