desktop media query complete

--- a/style.css
+++ b/style.css
@@ -233,17 +233,17 @@
   display: flex;
   align-items: center;
 }
-.classRoomImageDonation{
+.classRoomImageDonation {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.classRoomImage{
+.classRoomImage {
   width: 100%;
   height: 400px;
 }
-.donation{
+.donation {
   background-color: white;
   padding: 40px;
   position: absolute;
@@ -252,42 +252,101 @@
   flex-direction: column;
   justify-content: space-between;
 }
-.donationDetetails{
+.donationDetetails {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
 }
-.donationDetetails2{
+.donationDetetails2 {
   text-align: center;
 }
-.hashTagDetails{
+.hashTagDetails {
   height: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.hashTag{
+.hashTag {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
 }
-.afterHashTag{
+.afterHashTag {
   margin-top: 10px;
   text-align: center;
 }
-.variousUsers0{
+.variousUsers0 {
   padding-bottom: 50px;
   display: flex;
   justify-content: center;
 }
-.variousUsers{
+.variousUsers {
   width: 70%;
   display: flex;
   justify-content: space-between;
-
 }
-.userType{
+.userType {
   font-size: 10px;
   font-weight: bold;
   text-align: center;
+}
+.smileyCompliments0 {
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3C4F66;
+}
+.smileyCompliments {
+  width: 23%;
+  display: flex;
+  justify-content: space-between;
+}
+.freshGuaranteeLogo {
+  height: 50px;
+  width: 60px;
+}
+.compliments {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+.refund{
+  height: 150px;
+  color: white;
+  background-color: #3C4F66;
+  text-align: center;
+}
+.thirdButton{
+  margin-top: 20px;
+  background-color: white;
+  color: black;
+  font-weight: bolder;
+}
+.finalBar0{
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.finalBar{
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+.logoGoby{
+  width: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+.gobyText{
+  font-weight: bold;
+}
+.termsPolicy{
+  font-size: 15px;
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
 }
